# i2c_adapter

./: .gitignore  .readthedocs.yml  README.md  TODO.txt  diff_pip.sh  push_testpypi.sh  pyproject.toml
docs/: build.sh  conf.py  index.rst  index.rst.keep  requirements.txt
examples/: .gitignore  find_port.py  luma_test.py  oled_demo.py  requirements.txt  scan.py
firmware/platformio/: .gitignore  build_envs.py  platformio.ini
firmware/platformio/src/: board.cpp  board.h  main.cpp
firmware/release/: adafruit_kb2040.uf2  adafruit_qt_py_rp2040.uf2  firmware.uf2  raspberry_pico.uf2  sparkfun_pro_micro_rp2040.uf2
platformio/: platformio.ini
platformio/src/: main.cpp
src/examples/: master.py  slave.py
src/i2c_adapter/: __init__.py
tests/: oled.py  requirements.txt  test_crc16.py
