# Doc:
# https://hatch.pypa.io/latest/config/build/
#
# Examples:
# https://github.com/pypa/hatch/blob/master/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i2c_adapter"
version = "0.1.6"
authors = [
  { name="Zapta", email="zapta@zapta.com" },
]
description = "An easy to use USB to I2C adapter using a Raspberry Pico."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyserial >=3.5",
]

[tool.hatch.build.targets.sdist]
# NOTE: The package directory below must match the project name above.
include = [
  "LICENSE",
  "/src/i2c_adapter",
]
# NOTE: root .gitignore can't be excluded per 
# https://github.com/pypa/hatch/discussions/368
exclude = [
  ".gitignore",
  ".vscode",
  ".*.sh",
]

[project.urls]
"Homepage" = "https://github.com/zapta/i2c_adapter"
"Bug Tracker" = "https://github.com/zapta/i2c_adapter/issues"

